--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 spring.application.name=ganesh
-# MySQL Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/deckline
+
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
+spring.datasource.password=rtVLSTLdymGxilrVeqWvxNlOCnFgWRUD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# Spring Mail Configuration
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=pganeshkuma624@gmail.com
 spring.mail.password=klhx rdrn zhmh timd
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
+
 server.port=8081
